--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Git-treeni</h1>
   <h2>Tärkeä</h2>
+  <p>Kappale, joka lisätään leiskakoe-branchin luomisen jälkeen</p>
 </body>
 </html>
